service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: resume
  labels:
    app: resume
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: resume
  type: ClusterIP
