ingress.yaml
# # Ingress resource for the application
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: resume
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: hunter007.shop
#     http:
#       paths: 
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: resume
#             port:
#               number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hunter007.shop
    secretName: resume-tls
  rules:
  - host: hunter007.shop
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resume
            port:
              number: 80
